--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             status.textContent = 'Downloading...';
 
             try {
-                const response = await fetch('http://localhost:5000/download', {
+                const response = await fetch('https://yt8-d2v-bfp.onrender.com/download', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
