--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             status.textContent = 'Downloading...';
 
             try {
+                // const response = await fetch('http://127.0.0.1:10000/download', {
                 const response = await fetch('https://yt8-d2v-bfp.onrender.com/download', {
                     method: 'POST',
                     headers: {
